--- a/Proyecto_3/title_guess/package.json
+++ b/Proyecto_3/title_guess/package.json
@@ -12,6 +12,8 @@
     "clarifai-nodejs-grpc": "0.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0"
   },
