--- a/Proyecto_3/title_guess/package.json
+++ b/Proyecto_3/title_guess/package.json
@@ -10,6 +10,7 @@
     "chroma-js": "^2.1.0",
     "clarifai": "^2.9.1",
     "clarifai-nodejs-grpc": "0.0.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
